# LibBOt

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build_exe.py
src/libbot/: __init__.py  __main__.py  config.py  db.py  main.py  models.py
src/libbot/core/: __init__.py  annas.py  downloader.py  filters.py  libgen_patch.py  search.py  url_guard.py
src/libbot/services/: download_service.py  favorites_service.py  history_service.py  search_service.py  settings_service.py
src/libbot/ui/: app.py  theme.py
src/libbot/ui/components/: book_card.py  engine_selector.py  filters_panel.py  mirrors_dialog.py  progress_dialog.py  search_bar.py  toast.py
src/libbot/ui/views/: favorites_view.py  history_view.py  home_view.py  search_view.py  settings_view.py
