[project]
name = "libbot"
version = "1.0.0"
description = "Buscador y descargador de libros desktop (Libgen + Anna's Archive)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "JsSanchez08" },
]
dependencies = [
    "flet>=0.85.0",
    # Runtime nativo desktop. Flet lo descarga al arrancar si falta, pero
    # PyInstaller necesita encontrarlo instalado en build time para
    # empaquetarlo dentro del .exe.
    "flet-desktop>=0.85.0",
    "libgen-api==1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
libbot = "libbot.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
libbot = ["py.typed"]
